--- a/static/css/index.css
+++ b/static/css/index.css
@@ -26,6 +26,11 @@ body {
   padding: 2em 1.5em !important;
 }
 
+.blog-padded-tb-large {
+  padding-top: 2em !important;
+  padding-bottom: 2em !important;
+}
+
 .blog-padded-big {
   padding-top: 3em !important;
   padding-bottom: 3em !important;
@@ -39,6 +44,11 @@ body {
 .blog-padded-maxsive {
   padding-top: 5em !important;
   padding-bottom: 5em !important;
+}
+
+.blog-padded-lr {
+  padding-left: 4em !important;
+  padding-right: 4em !important;
 }
 
 .blog-wechat-image-size {
@@ -92,6 +102,11 @@ body {
   margin: auto !important;
 }
 
+.blog-container-small {
+  max-width: 60em !important;
+  margin: auto !important;
+}
+
 .blog-top-button {
   position: absolute;
   top: 1.2em;
@@ -110,6 +125,15 @@ body {
 
   .blog-mobile-show {
     display: block !important;
+  }
+
+  .blog-padded-lr {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+
+  .comment-mobile-wide {
+    width: 100% !important;
   }
 }
 
