fix(templates): front end template page structure arrangement

--- a/templates/admin/input.html
+++ b/templates/admin/input.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>博客发布(・ω&lt; )★</title>
   <link href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-  <link href="./../static/css/index.css" rel="stylesheet">
+  <link href="./../../static/css/index.css" rel="stylesheet">
   <!-- markdown依赖 -->
-  <link href="./../static/lib/editor.md/css/editormd.min.css" rel="stylesheet">
+  <link href="./../../static/lib/editor.md/css/editormd.min.css" rel="stylesheet">
   <!-- 网站 ico -->
-  <link href="./../favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="./../../favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         <div class="right menu nav-item blog-nav-mobile-hide">
           <div class="ui dropdown item">
             <div class="text">
-              <img src="../static/images/default.png" alt="用户头像" class="ui avatar image">Cifanse
+              <img src="./../../static/images/default.png" alt="用户头像" class="ui avatar image">Cifanse
             </div>
             <i class="icon dropdown"></i>
             <div class="menu">
@@ -193,7 +193,7 @@
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="./../static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
+              <img src="./../../static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
             </div>
           </div>
         </div>
@@ -231,7 +231,7 @@
   <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
   <!-- markdown依赖 -->
-  <script src="./../static/lib/editor.md/editormd.min.js"></script>
+  <script src="./../../static/lib/editor.md/editormd.min.js"></script>
   <script>
     // 初始化编辑器
 
@@ -240,7 +240,7 @@
         width: "100%",
         height: 640,
         syncScrolling: "single",
-        path: "./../static/lib/editor.md/lib/"
+        path: "./../../static/lib/editor.md/lib/"
       });
     });
 
