--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>博客首页(・ω&lt; )★</title>
   <link href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-  <link href="./static/css/index.css" rel="stylesheet">
+  <link href="./../static/css/index.css" rel="stylesheet">
   <!-- 网站 ico -->
-  <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="./../favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 
 <body>
@@ -72,7 +72,7 @@
                     <div class="eleven wide column">
                       <div class="ui mini horizontal link list">
                         <div class="item">
-                          <img src="./static/images/default.png" class="ui avatar image" alt="博主头像">
+                          <img src="./../static/images/default.png" class="ui avatar image" alt="博主头像">
                           <div class="content">
                             <a href="#" class="header">冯文泽</a>
                           </div>
@@ -95,7 +95,7 @@
 
                 <div class="five wide column">
                   <a href="#" target="_blank">
-                    <img src="./static/images/blog-background.png" class="ui rounded image" alt="文章封面">
+                    <img src="./../static/images/blog-background.png" class="ui rounded image" alt="文章封面">
                   </a>
                 </div>
               </div>
@@ -114,7 +114,7 @@
                     <div class="eleven wide column">
                       <div class="ui mini horizontal link list">
                         <div class="item">
-                          <img src="./static/images/default.png" class="ui avatar image" alt="博主头像">
+                          <img src="./../static/images/default.png" class="ui avatar image" alt="博主头像">
                           <div class="content">
                             <a href="#" class="header">冯文泽</a>
                           </div>
@@ -137,7 +137,7 @@
 
                 <div class="five wide column">
                   <a href="#" target="_blank">
-                    <img src="./static/images/blog-background.png" class="ui rounded image" alt="文章封面">
+                    <img src="./../static/images/blog-background.png" class="ui rounded image" alt="文章封面">
                   </a>
                 </div>
               </div>
@@ -156,7 +156,7 @@
                     <div class="eleven wide column">
                       <div class="ui mini horizontal link list">
                         <div class="item">
-                          <img src="./static/images/default.png" class="ui avatar image" alt="博主头像">
+                          <img src="./../static/images/default.png" class="ui avatar image" alt="博主头像">
                           <div class="content">
                             <a href="#" class="header">冯文泽</a>
                           </div>
@@ -179,7 +179,7 @@
 
                 <div class="five wide column">
                   <a href="#" target="_blank">
-                    <img src="./static/images/blog-background.png" class="ui rounded image" alt="文章封面">
+                    <img src="./../static/images/blog-background.png" class="ui rounded image" alt="文章封面">
                   </a>
                 </div>
               </div>
@@ -198,7 +198,7 @@
                     <div class="eleven wide column">
                       <div class="ui mini horizontal link list">
                         <div class="item">
-                          <img src="./static/images/default.png" class="ui avatar image" alt="博主头像">
+                          <img src="./../static/images/default.png" class="ui avatar image" alt="博主头像">
                           <div class="content">
                             <a href="#" class="header">冯文泽</a>
                           </div>
@@ -221,7 +221,7 @@
 
                 <div class="five wide column">
                   <a href="#" target="_blank">
-                    <img src="./static/images/blog-background.png" class="ui rounded image" alt="文章封面">
+                    <img src="./../static/images/blog-background.png" class="ui rounded image" alt="文章封面">
                   </a>
                 </div>
               </div>
@@ -240,7 +240,7 @@
                     <div class="eleven wide column">
                       <div class="ui mini horizontal link list">
                         <div class="item">
-                          <img src="./static/images/default.png" class="ui avatar image" alt="博主头像">
+                          <img src="./../static/images/default.png" class="ui avatar image" alt="博主头像">
                           <div class="content">
                             <a href="#" class="header">冯文泽</a>
                           </div>
@@ -263,7 +263,7 @@
 
                 <div class="five wide column">
                   <a href="#" target="_blank">
-                    <img src="./static/images/blog-background.png" class="ui rounded image" alt="文章封面">
+                    <img src="./../static/images/blog-background.png" class="ui rounded image" alt="文章封面">
                   </a>
                 </div>
               </div>
@@ -282,7 +282,7 @@
                     <div class="eleven wide column">
                       <div class="ui mini horizontal link list">
                         <div class="item">
-                          <img src="./static/images/default.png" class="ui avatar image" alt="博主头像">
+                          <img src="./../static/images/default.png" class="ui avatar image" alt="博主头像">
                           <div class="content">
                             <a href="#" class="header">冯文泽</a>
                           </div>
@@ -305,7 +305,7 @@
 
                 <div class="five wide column">
                   <a href="#" target="_blank">
-                    <img src="./static/images/blog-background.png" class="ui rounded image" alt="文章封面">
+                    <img src="./../static/images/blog-background.png" class="ui rounded image" alt="文章封面">
                   </a>
                 </div>
               </div>
@@ -324,7 +324,7 @@
                     <div class="eleven wide column">
                       <div class="ui mini horizontal link list">
                         <div class="item">
-                          <img src="./static/images/default.png" class="ui avatar image" alt="博主头像">
+                          <img src="./../static/images/default.png" class="ui avatar image" alt="博主头像">
                           <div class="content">
                             <a href="#" class="header">冯文泽</a>
                           </div>
@@ -347,7 +347,7 @@
 
                 <div class="five wide column">
                   <a href="#" target="_blank">
-                    <img src="./static/images/blog-background.png" class="ui rounded image" alt="文章封面">
+                    <img src="./../static/images/blog-background.png" class="ui rounded image" alt="文章封面">
                   </a>
                 </div>
               </div>
@@ -366,7 +366,7 @@
                     <div class="eleven wide column">
                       <div class="ui mini horizontal link list">
                         <div class="item">
-                          <img src="./static/images/default.png" class="ui avatar image" alt="博主头像">
+                          <img src="./../static/images/default.png" class="ui avatar image" alt="博主头像">
                           <div class="content">
                             <a href="#" class="header">冯文泽</a>
                           </div>
@@ -389,7 +389,7 @@
 
                 <div class="five wide column">
                   <a href="#" target="_blank">
-                    <img src="./static/images/blog-background.png" class="ui rounded image" alt="文章封面">
+                    <img src="./../static/images/blog-background.png" class="ui rounded image" alt="文章封面">
                   </a>
                 </div>
               </div>
@@ -408,7 +408,7 @@
                     <div class="eleven wide column">
                       <div class="ui mini horizontal link list">
                         <div class="item">
-                          <img src="./static/images/default.png" class="ui avatar image" alt="博主头像">
+                          <img src="./../static/images/default.png" class="ui avatar image" alt="博主头像">
                           <div class="content">
                             <a href="#" class="header">冯文泽</a>
                           </div>
@@ -431,7 +431,7 @@
 
                 <div class="five wide column">
                   <a href="#" target="_blank">
-                    <img src="./static/images/blog-background.png" class="ui rounded image" alt="文章封面">
+                    <img src="./../static/images/blog-background.png" class="ui rounded image" alt="文章封面">
                   </a>
                 </div>
               </div>
@@ -554,7 +554,7 @@
           <section>
             <h4 class="ui horizontal divider header blog-margin-top-large">扫码关注我</h4>
             <div class="ui centered blog-wechat-size card">
-              <img src="./static/images/WeChat.jpg" alt="微信二维码" class="ui rounded image">
+              <img src="./../static/images/WeChat.jpg" alt="微信二维码" class="ui rounded image">
             </div>
           </section>
 
@@ -571,7 +571,7 @@
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="./static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
+              <img src="./../static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
             </div>
           </div>
         </div>
