--- a/templates/about.html
+++ b/templates/about.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>关于沉默的我(・ω&lt; )★</title>
   <link href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-  <link href="./static/css/index.css" rel="stylesheet">
+  <link href="./../static/css/index.css" rel="stylesheet">
   <!-- 网站 ico -->
-  <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="./../favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
       <section class="ui stackable grid">
         <div class="eleven wide column">
           <div class="ui segment">
-            <img src="./static/images/me.png" alt="个人图片" class="ui rounded image">
+            <img src="./../static/images/me.png" alt="个人图片" class="ui rounded image">
           </div>
         </div>
         <aside class="five wide column">
@@ -77,7 +77,7 @@
           </div>
 
           <div class="ui wechat-qr flowing popup transition hidden">
-            <img src="./static/images/WeChat.jpg" alt="微信二维码" class="ui rounded image blog-wechat-image-size">
+            <img src="./../static/images/WeChat.jpg" alt="微信二维码" class="ui rounded image blog-wechat-image-size">
           </div>
         </aside>
       </section>
@@ -92,7 +92,7 @@
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="./static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
+              <img src="./../static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
             </div>
           </div>
         </div>
