--- a/templates/admin/blogs.html
+++ b/templates/admin/blogs.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>博客管理(・ω&lt; )★</title>
   <link href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-  <link href="./../static/css/index.css" rel="stylesheet">
+  <link href="./../../static/css/index.css" rel="stylesheet">
   <!-- 网站 ico -->
-  <link href="./../favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="./../../favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <div class="right menu nav-item blog-nav-mobile-hide">
           <div class="ui dropdown item">
             <div class="text">
-              <img src="../static/images/default.png" alt="用户头像" class="ui avatar image">Cifanse
+              <img src="./../../static/images/default.png" alt="用户头像" class="ui avatar image">Cifanse
             </div>
             <i class="icon dropdown"></i>
             <div class="menu">
@@ -143,7 +143,7 @@
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="./../static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
+              <img src="./../../static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
             </div>
           </div>
         </div>
