--- a/templates/archives.html
+++ b/templates/archives.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>博客归档(・ω&lt; )★</title>
   <link href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-  <link href="./static/css/index.css" rel="stylesheet">
+  <link href="./../static/css/index.css" rel="stylesheet">
   <!-- 网站 ico -->
-  <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="./../favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 
 <body>
@@ -197,7 +197,7 @@
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="./static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
+              <img src="./../static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
             </div>
           </div>
         </div>
