--- a/templates/blog.html
+++ b/templates/blog.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>博客详情页(・ω&lt; )★</title>
   <link href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-  <link href="./static/css/index.css" rel="stylesheet">
+  <link href="./../static/css/index.css" rel="stylesheet">
   <!-- 页面文章样式 -->
-  <link href="./static/css/typo.css" rel="stylesheet">
+  <link href="./../static/css/typo.css" rel="stylesheet">
   <!-- 动画集成 -->
-  <link href="./static/css/animate.css" rel="stylesheet"/>
-  <link href="./static/css/blog.css" rel="stylesheet">
+  <link href="./../static/css/animate.css" rel="stylesheet"/>
+  <link href="./../static/css/blog.css" rel="stylesheet">
   <!-- 代码高亮 -->
-  <link href="./static/lib/prism/css/prism.css" rel="stylesheet">
+  <link href="./../static/lib/prism/css/prism.css" rel="stylesheet">
   <!-- 目录生成 -->
-  <link href="./static/lib/tocbot/css/tocbot.css" rel="stylesheet">
+  <link href="./../static/lib/tocbot/css/tocbot.css" rel="stylesheet">
   <!-- 网站 ico -->
-  <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="./../favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
       <section class="ui top attached segment">
         <div class="ui horizontal link list">
           <div class="item">
-            <img src="./static/images/default.png" class="ui avatar image" alt="博主头像">
+            <img src="./../static/images/default.png" class="ui avatar image" alt="博主头像">
             <div class="content">
               <a href="#" class="header">冯文泽</a>
             </div>
@@ -72,7 +72,7 @@
 
       <!-- 图片区域 -->
       <section class="ui attached segment">
-        <img src="./static/images/blog-background.png" alt="文章背景图" class="ui fluid rounded image">
+        <img src="./../static/images/blog-background.png" alt="文章背景图" class="ui fluid rounded image">
       </section>
 
       <!-- 内容 -->
@@ -464,12 +464,12 @@ h5,h6{font-size:1em;}
             <div class="ui images pay-font">
               <!-- 支付宝 -->
               <div class="image">
-                <img src="./static/images/Alipay.jpg" class="ui rounded bordered image pay-qr-code" alt="支付宝">
+                <img src="./../static/images/Alipay.jpg" class="ui rounded bordered image pay-qr-code" alt="支付宝">
                 <div>支付宝</div>
               </div>
               <!-- 微信支付 -->
               <div class="image">
-                <img src="./static/images/WeChat-pay.png" class="ui rounded bordered image pay-qr-code" alt="微信支付">
+                <img src="./../static/images/WeChat-pay.png" class="ui rounded bordered image pay-qr-code" alt="微信支付">
                 <div>微信支付</div>
               </div>
             </div>
@@ -489,7 +489,7 @@ h5,h6{font-size:1em;}
             </ui>
           </div>
           <div class="five wide column">
-            <img src="./static/images/WeChat.jpg" class="ui right floated rounded bordered image blog-wechat-image-size" alt="作者二维码">
+            <img src="./../static/images/WeChat.jpg" class="ui right floated rounded bordered image blog-wechat-image-size" alt="作者二维码">
           </div>
         </div>
       </section>
@@ -502,7 +502,7 @@ h5,h6{font-size:1em;}
             <h3 class="ui dividing header">Comments</h3>
             <div class="comment">
               <a class="avatar">
-                <img src="./static/images/default.png">
+                <img src="./../static/images/default.png">
               </a>
               <div class="content">
                 <a class="author">Matt</a>
@@ -517,7 +517,7 @@ h5,h6{font-size:1em;}
             </div>
             <div class="comment">
               <a class="avatar">
-                <img src="./static/images/default.png">
+                <img src="./../static/images/default.png">
               </a>
               <div class="content">
                 <a class="author">Elliot Fu</a>
@@ -534,7 +534,7 @@ h5,h6{font-size:1em;}
               <div class="comments">
                 <div class="comment">
                   <a class="avatar">
-                    <img src="./static/images/default.png">
+                    <img src="./../static/images/default.png">
                   </a>
                   <div class="content">
                     <a class="author">Jenny Hess</a>
@@ -551,7 +551,7 @@ h5,h6{font-size:1em;}
             </div>
             <div class="comment">
               <a class="avatar">
-                <img src="./static/images/default.png">
+                <img src="./../static/images/default.png">
               </a>
               <div class="content">
                 <a class="author">Joe Henderson</a>
@@ -622,7 +622,7 @@ h5,h6{font-size:1em;}
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="./static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
+              <img src="./../static/images/WeChat.jpg" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
             </div>
           </div>
         </div>
@@ -660,15 +660,15 @@ h5,h6{font-size:1em;}
   <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
   <!-- 平滑滚动 -->
-  <script src="./static/lib/jquery.scrollTo/jquery.scrollTo.min.js"></script>
+  <script src="./../static/lib/jquery.scrollTo/jquery.scrollTo.min.js"></script>
   <!-- 代码高亮 -->
-  <script src="./static/lib/prism/js/prism.js"></script>
+  <script src="./../static/lib/prism/js/prism.js"></script>
   <!-- 生成目录 -->
-  <script src="./static/lib/tocbot/js/tocbot.min.js"></script>
+  <script src="./../static/lib/tocbot/js/tocbot.min.js"></script>
   <!-- 二维码生成 -->
-  <script src="./static/lib/qrcodejs/qrcode.min.js"></script>
+  <script src="./../static/lib/qrcodejs/qrcode.min.js"></script>
   <!-- 滚动侦测 -->
-  <script src="./static/lib/waypoints/jquery.waypoints.min.js"></script>
+  <script src="./../static/lib/waypoints/jquery.waypoints.min.js"></script>
   <script>
     $('#show-button').click(function () {
       $('.nav-item').toggleClass('blog-nav-mobile-hide');
