feat(page): error page added

--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>error</title>
+    <link href="./../../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet">
     <!-- 网站 ico -->
-    <link href="./../../static/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="./../../static/favicon.ico" th:href="@{/favicon.ico}" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
     <h1>错误</h1>
 
     <div>
-        <div th:utext="'&lt;!--'" th:remove="tag"></div>
-        <div ></div>
-        <div></div>
-        <div></div>
+
     </div>
 </body>
 </html>
