--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -1,237 +1,92 @@
 <!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>500呀😥</title>
-    <link href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-    <link href="./../../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet">
-    <!-- 网站 ico -->
-    <link href="./../../static/favicon.ico" th:href="@{/favicon.ico}" rel="shortcut icon" type="image/x-icon">
-    <style>
-        .error-container {
-            text-align: center;
-            font-size: 106px;
-            font-family: 'Catamaran', sans-serif;
-            font-weight: 800;
-            margin: 70px 15px;
-        }
-
-        .error-container>span {
-            display: inline-block;
-            position: relative;
-        }
-
-        .error-container>span.four {
-            width: 136px;
-            height: 43px;
-            border-radius: 999px;
-            background:
-                    linear-gradient(140deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 43%, transparent 44%, transparent 100%),
-                    linear-gradient(105deg, transparent 0%, transparent 40%, rgba(0, 0, 0, 0.06) 41%, rgba(0, 0, 0, 0.07) 76%, transparent 77%, transparent 100%),
-                    linear-gradient(to right, #d89ca4, #e27b7e);
-        }
-
-        .error-container>span.four:before,
-        .error-container>span.four:after {
-            content: '';
-            display: block;
-            position: absolute;
-            border-radius: 999px;
-        }
-
-        .error-container>span.four:before {
-            width: 43px;
-            height: 156px;
-            left: 60px;
-            bottom: -43px;
-            background:
-                    linear-gradient(128deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 40%, transparent 41%, transparent 100%),
-                    linear-gradient(116deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 50%, transparent 51%, transparent 100%),
-                    linear-gradient(to top, #99749D, #B895AB, #CC9AA6, #D7969E, #E0787F);
-        }
-
-        .error-container>span.four:after {
-            width: 137px;
-            height: 43px;
-            transform: rotate(-49.5deg);
-            left: -18px;
-            bottom: 36px;
-            background: linear-gradient(to right, #99749D, #B895AB, #CC9AA6, #D7969E, #E0787F);
-        }
-
-        .error-container>span.zero {
-            vertical-align: text-top;
-            width: 156px;
-            height: 156px;
-            border-radius: 999px;
-            background: linear-gradient(-45deg, transparent 0%, rgba(0, 0, 0, 0.06) 50%, transparent 51%, transparent 100%),
-            linear-gradient(to top right, #99749D, #99749D, #B895AB, #CC9AA6, #D7969E, #ED8687, #ED8687);
-            overflow: hidden;
-            animation: bgshadow 5s infinite;
-        }
-
-        .error-container>span.zero:before {
-            content: '';
-            display: block;
-            position: absolute;
-            transform: rotate(45deg);
-            width: 90px;
-            height: 90px;
-            background-color: transparent;
-            left: 0px;
-            bottom: 0px;
-            background:
-                    linear-gradient(95deg, transparent 0%, transparent 8%, rgba(0, 0, 0, 0.07) 9%, transparent 50%, transparent 100%),
-                    linear-gradient(85deg, transparent 0%, transparent 19%, rgba(0, 0, 0, 0.05) 20%, rgba(0, 0, 0, 0.07) 91%, transparent 92%, transparent 100%);
-        }
-
-        .error-container>span.zero:after {
-            content: '';
-            display: block;
-            position: absolute;
-            border-radius: 999px;
-            width: 70px;
-            height: 70px;
-            left: 43px;
-            bottom: 43px;
-            background: #FDFAF5;
-            box-shadow: -2px 2px 2px 0px rgba(0, 0, 0, 0.1);
-        }
-
-        .screen-reader-text {
-            position: absolute;
-            top: -9999em;
-            left: -9999em;
-        }
-
-        @keyframes bgshadow {
-            0% {
-                box-shadow: inset -160px 160px 0px 5px rgba(0, 0, 0, 0.4);
-            }
-
-            45% {
-                box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
-            }
-
-            55% {
-                box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
-            }
-
-            100% {
-                box-shadow: inset 160px -160px 0px 5px rgba(0, 0, 0, 0.4);
-            }
-        }
-
-        body {
-            background-color: #FDFAF5;
-            margin-bottom: 50px;
-        }
-
-        html,
-        button,
-        input,
-        select,
-        textarea {
-            font-family: 'Montserrat', Helvetica, sans-serif;
-            color: #bbb;
-        }
-
-        h1 {
-            text-align: center;
-            margin: 30px 15px;
-        }
-
-        .zoom-area {
-            max-width: 490px;
-            margin: 30px auto 30px;
-            font-size: 19px;
-            text-align: center;
-        }
-
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>500呀😥</title>
+  <link href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
+  <link href="./../../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet">
+  <!-- 网站 ico -->
+  <link href="./../../static/favicon.ico" th:href="@{/favicon.ico}" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
-<!-- 顶栏 -->
-<header class="ui inverted attached segment blog-header-tb-mini blog-nav-shadow">
+  <!-- 顶栏 -->
+  <header class="ui inverted attached segment blog-header-tb-mini blog-nav-shadow">
     <!-- 导航栏容器 -->
     <section class="ui inverted container">
-        <nav class="ui inverted secondary stackable menu">
-            <h2 class="ui teal header item">Anchor</h2>
-            <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon home"></i>首页</a>
-            <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon idea"></i>分类</a>
-            <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon tags"></i>标签</a>
-            <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon clone"></i>归档</a>
-            <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon info"></i>关于我</a>
-            <!-- 搜索框容器 -->
-            <section class="nav-item right item blog-nav-mobile-hide">
-                <label class="ui inverted transparent icon input">
-                    <input type="text" placeholder="Search...">
-                    <i class="icon search link"></i>
-                </label>
-            </section>
-        </nav>
+      <nav class="ui inverted secondary stackable menu">
+        <h2 class="ui teal header item">Anchor</h2>
+        <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon home"></i>首页</a>
+        <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon idea"></i>分类</a>
+        <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon tags"></i>标签</a>
+        <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon clone"></i>归档</a>
+        <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon info"></i>关于我</a>
+        <!-- 搜索框容器 -->
+        <section class="nav-item right item blog-nav-mobile-hide">
+          <label class="ui inverted transparent icon input">
+            <input type="text" placeholder="Search...">
+            <i class="icon search link"></i>
+          </label>
+        </section>
+      </nav>
     </section>
     <a href="#" id="show-button" class="ui black icon button blog-top-button blog-mobile-show">
-        <i class="icon sidebar"></i>
+      <i class="icon sidebar"></i>
     </a>
-</header>
-
-<main class="blog-container-small blog-padded-massive">
-    <section class="ui message blog-padded-huge">
-        <div class="ui container">
-            <section class="error-container">
-                <span class="four"><span class="screen-reader-text">5</span></span>
-                <span class="zero"><span class="screen-reader-text">0</span></span>
-                <span class="four"><span class="screen-reader-text">0</span></span>
-            </section>
-        </div>
+  </header>
+  <br><br><br>
+  <main class="blog-container-small blog-padded-massive">
+    <section class="ui purple message blog-padded-massive">
+      <div class="ui container">
+        <h2>500</h2>
+        <p>系统出现错误，请联系管理员处理！</p>
+      </div>
     </section>
-</main>
-
-<!-- 页脚 -->
-<footer class="ui inverted vertical segment blog-padded-massive">
+  </main>
+  <br><br><br>
+  <!-- 页脚 -->
+  <footer class="ui inverted vertical segment blog-padded-massive">
     <section class="ui center aligned container">
-        <div class="ui stackable grid inverted divided">
-            <div class="three wide column">
-                <div class="ui inverted link list">
-                    <div class="item">
-                        <img src="./../../static/images/WeChat.jpg" th:src="@{/images/WeChat.jpg}" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
-                    </div>
-                </div>
+      <div class="ui stackable grid inverted divided">
+        <div class="three wide column">
+          <div class="ui inverted link list">
+            <div class="item">
+              <img src="./../../static/images/WeChat.jpg" th:src="@{/images/WeChat.jpg}" class="ui rounded image blog-wechat-image-size" alt="微信二维码">
             </div>
-            <section class="three wide column">
-                <h4 class="ui inverted header blog-text-thin blog-text-spaced">最新博客</h4>
-                <div class="ui inverted link list">
-                    <a href="#" class="item">用户故事</a>
-                    <a href="#" class="item">非常一般</a>
-                    <a href="#" class="item">不知道干啥（？？？）</a>
-                </div>
-            </section>
-            <address class="three wide column">
-                <h4 class="ui inverted header blog-text-thin blog-text-spaced">联系我</h4>
-                <div class="ui inverted link list">
-                    <a href="#" class="item">Email：scpcrow@outlook.com</a>
-                    <a href="#" class="item">QQ：1182256904</a>
-                </div>
-            </address>
-            <section class="seven wide column">
-                <h4 class="ui inverted header blog-text-thin blog-text-spaced">anchor-blog</h4>
-                <p class="blog-text-thin blog-text-spaced blog-opacity-mini">Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Tempore et veritatis ab animi architecto nostrum
-                    nisi soluta nemo dolores atque error, culpa quasi ipsa minus optio esse sunt sed at.</p>
-            </section>
+          </div>
         </div>
-        <!-- 分割线 -->
-        <div class="ui inverted section divider"></div>
-        <small class="blog-text-thin blog-text-spaced blog-opacity-mini">
-            Copyright &copy; 2020 - 2021 anchor-blog Designed by helaos
-        </small>
+        <section class="three wide column">
+          <h4 class="ui inverted header blog-text-thin blog-text-spaced">最新博客</h4>
+          <div class="ui inverted link list">
+            <a href="#" class="item">用户故事</a>
+            <a href="#" class="item">非常一般</a>
+            <a href="#" class="item">不知道干啥（？？？）</a>
+          </div>
+        </section>
+        <address class="three wide column">
+          <h4 class="ui inverted header blog-text-thin blog-text-spaced">联系我</h4>
+          <div class="ui inverted link list">
+            <a href="#" class="item">Email：scpcrow@outlook.com</a>
+            <a href="#" class="item">QQ：1182256904</a>
+          </div>
+        </address>
+        <section class="seven wide column">
+          <h4 class="ui inverted header blog-text-thin blog-text-spaced">anchor-blog</h4>
+          <p class="blog-text-thin blog-text-spaced blog-opacity-mini">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Tempore et veritatis ab animi architecto nostrum
+            nisi soluta nemo dolores atque error, culpa quasi ipsa minus optio esse sunt sed at.</p>
+        </section>
+      </div>
+      <!-- 分割线 -->
+      <div class="ui inverted section divider"></div>
+      <small class="blog-text-thin blog-text-spaced blog-opacity-mini">
+        Copyright &copy; 2020 - 2021 anchor-blog Designed by helaos
+      </small>
     </section>
-</footer>
+  </footer>
 
-<!-- 导入框架 -->
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+  <!-- 导入框架 -->
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 </body>
 </html>
