feat(core): integration shiro simple login and logout and rights management.

--- a/src/main/resources/templates/admin/input.html
+++ b/src/main/resources/templates/admin/input.html
@@ -46,7 +46,7 @@
     <div class="ui container">
       <div class="right menu">
         <a href="#" class="active pink item">发布</a>
-        <a href="#" class="item">发布</a>
+        <a href="#" class="item">列表</a>
       </div>
     </div>
   </section>
