--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -53,86 +53,11 @@
   <main class="blog-container-small blog-padded-big">
     <!-- 管理内容容器 -->
     <section class="ui container">
-      <form action="#" method="post" class="ui segment form">
-        <div class="inline fields">
-          <label for="blog-title" class="field">
-            <input type="text" name="title" id="blog-title" placeholder="标题">
-          </label>
-          <div class="field">
-            <div class="ui selection dropdown">
-              <input type="hidden" name="type">
-              <i class="icon dropdown"></i>
-              <div class="default text">分类</div>
-              <div class="menu">
-                <div class="item" data-value="1">错误日志</div>
-                <div class="item" data-value="2">开发手册</div>
-              </div>
-            </div>
-          </div>
-          <div class="field">
-            <div class="ui checkbox">
-              <input type="checkbox" id="recommend" name="recommend">
-              <label for="recommend">
-                推荐
-              </label>
-            </div>
-          </div>
-          <div class="field">
-            <button class="ui mini violet basic button">
-              <i class="icon search"></i>
-              搜索
-            </button>
-          </div>
-        </div>
-      </form>
-
-      <table class="ui striped purple celled table center aligned">
-        <thead>
-          <tr>
-            <th>序号</th>
-            <th>标题</th>
-            <th>类型</th>
-            <th>推荐</th>
-            <th>更新时间</th>
-            <th>操作</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>刻意练习清单</td>
-            <td>认知升级</td>
-            <td>是</td>
-            <td>2017-10-02 09:45</td>
-            <td>
-              <a href="#" class="ui mini yellow basic button">编辑</a>
-              <a href="#" class="ui mini red basic button">删除</a>
-            </td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr>
-            <th colspan="6">
-              <div class="ui mini floated pagination menu">
-                <a class="icon item">
-                  <i class="left icon arrow"></i>
-                </a>
-                <a class="item">1</a>
-                <a class="item">2</a>
-                <a class="item">3</a>
-                <a class="item">...</a>
-                <a class="item">14</a>
-                <a class="item">15</a>
-                <a class="item">16</a>
-                <a class="icon item">
-                  <i class="right icon arrow"></i>
-                </a>
-              </div>
-              <a href="#" class="ui mini green basic right floated button"><i class="icon add"></i>新增</a>
-            </th>
-          </tr>
-        </tfoot>
-      </table>
+      <div class="ui success large message">
+        <h3>Hi,</h3>
+        <p>冯文泽，欢迎登录！</p>
+      </div>
+      <img src="./../../static/images/20210222.jpg" th:src="@{/images/20210222.jpg}" alt="管理员首页图片" class="ui rounded bordered fluid image">
     </section>
   </main>
 
